Bug 2411 - Allow projects to customize some basic variables
Change-Id: Icb5cec92a27441c6d618dc0f22ed5d2d2308fb65
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>